# ask-my-repo

./: .gitignore  LEARNINGS.md  README.md  pyproject.toml  requirements.txt  smoke_test.py
ask_my_repo/: __init__.py  answer.py  chunker.py  cli.py  client.py  config.py  eval.py  indexer.py  retrieval.py  walker.py
gold/: gold.jsonl
