[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-my-repo"
version = "0.1.0"
description = "Walk, chunk, index, and retrieve Python code to answer questions about it"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "anthropic>=0.40",
    "voyageai>=0.3",
]

[project.scripts]
ask-my-repo = "ask_my_repo.cli:main"

[tool.setuptools.packages.find]
include = ["ask_my_repo*"]
